Fixed z-index and background images

--- a/css/style.css
+++ b/css/style.css
@@ -108,18 +108,9 @@ section {
 
 
 .image-home-background {
-    position: absolute;
-    height: 100vh;
-    width: 100%;
-    left: 0;
-    right: 0;
     background-image: url(../images/bg2.svg);
     background-size: cover;
     background-repeat: no-repeat;
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    opacity: 0.8;
   }
 
   .content-accueil {
@@ -199,18 +190,28 @@ section {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    opacity: 0.3;
+    opacity: 0.8;
+
 }
 
 
 .exp-box1 h1 {
 
-    position: relative;
-    left: 33%;
-    top: -10px;
-    padding: 10px;
-    display: inline-block;
+  position: relative;
+  text-align: center;
+  text-shadow: 3px 2px black;
+  font-size: 2rem;
+  padding-top: 0.5rem;
+
     
+}
+
+.exp-box1 h2 {
+
+  position: relative;
+  padding: 2rem 2rem 2rem 2rem;
+  text-shadow: 3px 2px black;
+
 }
 
 /* Typewriter effect 1 */
@@ -233,7 +234,7 @@ section {
     36.4651%, 45.5814% { content: "Museu"; }
     37.6047%, 44.4419% { content: "Museum"; }
   
-    54.6977%, 75.2093% { content: ""; }
+    54.6977%, 75.2093% { content: " "; }
     55.8372%, 74.0698% { content: "N"; }
     56.9767%, 72.9302% { content: "NA"; }
     58.1163%, 71.7907% { content: "NAM"; }
@@ -241,14 +242,19 @@ section {
     60.3953%, 69.5116% { content: "NAM-I"; }
     61.5349%, 68.3721% { content: "NAM-IP"; }
 
-    78.6279%, 96.8605% { content: ""; }
-    79.7674%, 95.7209% { content: "COMPUTER"; }
-    80.9070%, 94.5814% { content: "COMPUTER MUSEUM"; }
-    82.0465%, 93.4419% { content: "COMPUTER MUSEUM NAM"; }
-    83.1860%, 92.3023% { content: "COMPUTER MUSEUM NAM-IP"; }
+    78.6279%, 96.8605% { content: " "; }
+    79.7674%, 95.7209% { content: "2"; }
+    80.9070%, 94.5814% { content: "20"; }
+    82.0465%, 93.4419% { content: "202"; }
+    83.1860%, 92.3023% { content: "2023"; }
   
   }
     
+  .typewriter {
+    color: white;
+    font-size: 2.5rem;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  }
   
   .typewriter::before {
     content: "";
@@ -318,16 +324,4 @@ section {
     padding: 8px 12px;
     position: absolute;
     top: 0;
-  }
-  
-
-  
-  .fade {
-    animation-name: fade;
-    animation-duration: 1.5s;
-  }
-  
-  @keyframes fade {
-    from {opacity: .4}
-    to {opacity: 1}
   }
